Member card overflow bug fixed

--- a/css/about_style.css
+++ b/css/about_style.css
@@ -33,8 +33,9 @@
 .about_image {
     width: 450px;
     height: auto;
+    max-height: 264.14px;
     border-radius: 10px;
-    margin-right: 20px;
+    margin: auto 0 auto 0;
 }
 
 .about_info{
@@ -74,7 +75,8 @@
 }
 
 .team_member {
-    width: 300px;
+    width: 33%;
+    max-width: 300px;
     margin: 15px;
     padding: 10px;
     background-color: #f0f0f0;
@@ -108,6 +110,7 @@
 
     .about_image {
         width: 100%;
+        max-width: 450px;
         margin-bottom: 20px;
     }
 
@@ -124,5 +127,6 @@
     .team_member {
     width: 90%;
     max-width: 400px;
+    margin-bottom: 50px;
     }
 }
